🚨 V19.0: Alert System 강화 (TQQQ 폭락 감지 추가)
[핵심 변경 사항]
1. TQQQ 긴급 알림 추가
   - TQQQ MDD -30% 이하 시 청산 위험 경고 발송
   - 3배 레버리지 급락 상황 실시간 감지

2. 선택적 생존 신고 기능 (Optional)
   - SEND_DAILY_HEALTH=true 설정 시 매일 시장 정상 체크 메시지 발송
   - 미설정 시 위기 상황에만 알림 (기본값)

3. V19.0 로직 완전 반영
   - RSI 광기/과열 (80/75)
   - MDD 4단계 (-20/-30/-40/-50%)
   - Macro 감시 (VIX 공포, TNX 금리)
   - 모든 알림 조건이 앱과 100% 동기화

--- a/.github/workflows/daily_check.yml
+++ b/.github/workflows/daily_check.yml
@@ -26,4 +26,5 @@ jobs:
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
+          SEND_DAILY_HEALTH: ${{ secrets.SEND_DAILY_HEALTH }}
         run: python alert.py
